fix(colors): Sharper colors with more contrast and less depression

--- a/apps/web/src/components/Button/Styles.module.scss
+++ b/apps/web/src/components/Button/Styles.module.scss
@@ -8,7 +8,7 @@
     display: inline-flex;
     padding: 14px 24px;
     border-radius: vars.$border-radius;
-    background-color: colors.get(neutral, xlight);
+    background-color: colors.get(neutral, light);
     align-items: center;
     justify-content: center;
     transition:
@@ -17,7 +17,7 @@
 
     &:hover,
     &:focus:focus-visible {
-        background-color: colors.get(neutral, light);
+        background-color: colors.get(neutral, base);
     }
 
     &__icon {
